// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Template should successfully render the summary template 1`] = `
<Container
  locale="en"
  sidebar={
    <SidebarTemplate
      eligibilityCard={null}
      label="sidebar.home.label"
      lists={Array []}
      process={
        Object {
          "steps": Array [
            Object {
              "label": "process step",
              "name": "process step",
              "status": "finish",
            },
          ],
          "title": "process title",
        }
      }
      relatedJourney={null}
      relevantEntity={
        Object {
          "entities": Array [
            Object {
              "address": "departmentOfEconomicDevelopment.address",
              "email": "contact.abudhabi.ae",
              "id": 0,
              "logo": "/images/DED-logo.png",
              "officeHours": Object {
                "status": "default",
                "workingHours": Object {
                  "friday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "monday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "saturday": Object {
                    "closed": true,
                  },
                  "sunday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "thursday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "tuesday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "wednesday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                },
              },
              "phones": Array [
                "+971 2 815 8888",
              ],
              "publicServiceHours": Object {
                "status": "24/7",
              },
              "website": "www.adeconomy.ae",
            },
          ],
          "title": "relevant_entity",
        }
      }
      relevantEntityLink={
        Object {
          "label": "sidebar.home.relevantEntityLink",
        }
      }
      socialSharing={null}
    />
  }
>
  <div
    className=""
  >
    <h1
      className="syb-title"
      style={
        Object {
          "marginBottom": "2rem",
        }
      }
    >
      Test subtitle
    </h1>
    <p
      style={
        Object {
          "color": "#000",
        }
      }
    >
      Payment Template
    </p>
  </div>
  <div
    arial-label="Payment Summary"
    className="summary"
    role="contentinfo"
  >
    <LocalizedComponent(Form)
      actions={
        Object {
          "breadcrumbs": Object {
            "update": [MockFunction],
          },
        }
      }
      backButton={null}
      breadcrumbs={Array []}
      businessKey="123456"
      buttons={
        Array [
          Object {
            "label": "button",
            "onClick": [MockFunction],
            "uiType": "primary",
            "withArraow": false,
          },
        ]
      }
      cancelLink={
        Object {
          "href": "",
          "label": undefined,
          "onClick": [Function],
        }
      }
      description="Payment Template"
      handleBackButton={[MockFunction]}
      handleCancelLink={[MockFunction]}
      handleSelectLicence={[MockFunction]}
      handleStartService={[MockFunction]}
      handleTermsConditions={[MockFunction]}
      help=""
      i18n={[Function]}
      id=""
      instanceId="123456"
      licenceList={Array []}
      list={
        Array [
          Object {
            "columns": Array [
              Object {
                "id": 1,
                "title": "test column1",
              },
            ],
            "items": Array [
              Object {
                "id": 1,
              },
            ],
          },
        ]
      }
      loadingLicences={false}
      locale="en"
      location={Object {}}
      match={Object {}}
      process={
        Object {
          "steps": Array [
            Object {
              "name": "process step",
            },
          ],
          "title": "process title",
        }
      }
      recordId="LN-1234567"
      selectedLicence={true}
      showErrors={false}
      startingPayment={false}
      status="success"
      stepStatus={
        Object {
          "process step": "finish",
        }
      }
      submitButton={
        Object {
          "label": "button",
          "onClick": [Function],
          "withArrow": true,
        }
      }
      submitting={false}
      subtitle="Test subtitle"
      termsAndConditions={Array []}
      termsAndConditionsValues={
        Array [
          true,
        ]
      }
      title="Test title"
      totalSection={200}
      validateStatus={null}
    >
      <div
        className="summary__group summary__group__table"
      >
        <LocalizedComponent(Table)
          clickable={false}
          columns={
            Array [
              Object {
                "id": 1,
                "title": "test column1",
              },
            ]
          }
          commonSelection="unchecked"
          currPage={null}
          disabledSelectionVisible={false}
          editable={false}
          filter={null}
          headerHidden={false}
          i18n={[Function]}
          isSingleSelect={false}
          items={
            Array [
              Object {
                "id": 1,
              },
            ]
          }
          multiActions={null}
          onActionClick={[Function]}
          onClick={[Function]}
          onFilter={[Function]}
          onPageResize={[Function]}
          onPageTurn={[Function]}
          onRefreshClick={[Function]}
          onSearch={[Function]}
          onSelectionChange={[Function]}
          onSort={[Function]}
          onToggle={[Function]}
          pageResizeOptions={Array []}
          pageSize={null}
          rowVerticalAlign="top"
          search=""
          searchable={false}
          selectable={false}
          singleActions={null}
          size="default"
          sort={null}
          status=""
          title=""
          total={null}
        />
      </div>
      <div
        className="summary__group"
      >
        <LocalizedComponent(Total)
          buttonDisabled={false}
          i18n={[Function]}
          isButtonVisible={false}
          isValueFirst={false}
          onClick={null}
          unit="global.aed"
          value={200}
        />
      </div>
      <div
        className="summary__group"
      >
        <TermsAndConditions
          checked={
            Array [
              true,
            ]
          }
          handleClick={[Function]}
          i18n={[Function]}
          items={Array []}
          showErrors={false}
        />
      </div>
    </LocalizedComponent(Form)>
  </div>
</Container>
`;

exports[`Summary Template should successfully render the summary template with spinner when starting payment 1`] = `
<Container
  locale="en"
  sidebar={
    <SidebarTemplate
      eligibilityCard={null}
      label="sidebar.home.label"
      lists={Array []}
      process={
        Object {
          "steps": Array [
            Object {
              "label": "process step",
              "name": "process step",
              "status": "finish",
            },
          ],
          "title": "process title",
        }
      }
      relatedJourney={null}
      relevantEntity={
        Object {
          "entities": Array [
            Object {
              "address": "departmentOfEconomicDevelopment.address",
              "email": "contact.abudhabi.ae",
              "id": 0,
              "logo": "/images/DED-logo.png",
              "officeHours": Object {
                "status": "default",
                "workingHours": Object {
                  "friday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "monday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "saturday": Object {
                    "closed": true,
                  },
                  "sunday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "thursday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "tuesday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                  "wednesday": Object {
                    "closed": false,
                    "end": "10 pm",
                    "label": "5 am - 10 pm",
                    "start": "5 am",
                  },
                },
              },
              "phones": Array [
                "+971 2 815 8888",
              ],
              "publicServiceHours": Object {
                "status": "24/7",
              },
              "website": "www.adeconomy.ae",
            },
          ],
          "title": "relevant_entity",
        }
      }
      relevantEntityLink={
        Object {
          "label": "sidebar.home.relevantEntityLink",
        }
      }
      socialSharing={null}
    />
  }
>
  <Component />
  <div
    className=""
  >
    <h1
      className="syb-title"
      style={
        Object {
          "marginBottom": "2rem",
        }
      }
    >
      Test subtitle
    </h1>
    <p
      style={
        Object {
          "color": "#000",
        }
      }
    >
      Payment Template
    </p>
  </div>
  <div
    arial-label="Payment Summary"
    className="summary"
    role="contentinfo"
  >
    <LocalizedComponent(Form)
      actions={
        Object {
          "breadcrumbs": Object {
            "update": [MockFunction],
          },
        }
      }
      backButton={null}
      breadcrumbs={Array []}
      businessKey="123456"
      buttons={
        Array [
          Object {
            "label": "button",
            "onClick": [MockFunction],
            "uiType": "primary",
            "withArraow": false,
          },
        ]
      }
      cancelLink={
        Object {
          "href": "",
          "label": undefined,
          "onClick": [Function],
        }
      }
      description="Payment Template"
      handleBackButton={[MockFunction]}
      handleCancelLink={[MockFunction]}
      handleSelectLicence={[MockFunction]}
      handleStartService={[MockFunction]}
      handleTermsConditions={[MockFunction]}
      help=""
      i18n={[Function]}
      id=""
      instanceId="123456"
      licenceList={Array []}
      list={
        Array [
          Object {
            "columns": Array [
              Object {
                "id": 1,
                "title": "test column1",
              },
            ],
            "items": Array [
              Object {
                "id": 1,
              },
            ],
          },
        ]
      }
      loadingLicences={false}
      locale="en"
      location={Object {}}
      match={Object {}}
      process={
        Object {
          "steps": Array [
            Object {
              "name": "process step",
            },
          ],
          "title": "process title",
        }
      }
      recordId="LN-1234567"
      selectedLicence={true}
      showErrors={false}
      startingPayment={true}
      status="success"
      stepStatus={
        Object {
          "process step": "finish",
        }
      }
      submitButton={
        Object {
          "label": "button",
          "onClick": [Function],
          "withArrow": true,
        }
      }
      submitting={false}
      subtitle="Test subtitle"
      termsAndConditions={Array []}
      termsAndConditionsValues={
        Array [
          true,
        ]
      }
      title="Test title"
      totalSection={200}
      validateStatus={null}
    >
      <div
        className="summary__group summary__group__table"
      >
        <LocalizedComponent(Table)
          clickable={false}
          columns={
            Array [
              Object {
                "id": 1,
                "title": "test column1",
              },
            ]
          }
          commonSelection="unchecked"
          currPage={null}
          disabledSelectionVisible={false}
          editable={false}
          filter={null}
          headerHidden={false}
          i18n={[Function]}
          isSingleSelect={false}
          items={
            Array [
              Object {
                "id": 1,
              },
            ]
          }
          multiActions={null}
          onActionClick={[Function]}
          onClick={[Function]}
          onFilter={[Function]}
          onPageResize={[Function]}
          onPageTurn={[Function]}
          onRefreshClick={[Function]}
          onSearch={[Function]}
          onSelectionChange={[Function]}
          onSort={[Function]}
          onToggle={[Function]}
          pageResizeOptions={Array []}
          pageSize={null}
          rowVerticalAlign="top"
          search=""
          searchable={false}
          selectable={false}
          singleActions={null}
          size="default"
          sort={null}
          status=""
          title=""
          total={null}
        />
      </div>
      <div
        className="summary__group"
      >
        <LocalizedComponent(Total)
          buttonDisabled={false}
          i18n={[Function]}
          isButtonVisible={false}
          isValueFirst={false}
          onClick={null}
          unit="global.aed"
          value={200}
        />
      </div>
      <div
        className="summary__group"
      >
        <TermsAndConditions
          checked={
            Array [
              true,
            ]
          }
          handleClick={[Function]}
          i18n={[Function]}
          items={Array []}
          showErrors={false}
        />
      </div>
    </LocalizedComponent(Form)>
  </div>
</Container>
`;
